kubernetes/apps/flux-system/flux-operator/instance/github/webhooks/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: websecure
  hostnames:
    - "flux-webhook.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth
      backendRefs:
        - name: webhook-receiver
          port: 80
