kubernetes/apps/flux-system/flux-operator/instance/github/webhooks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-production # Used for non-wildcard
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "network-chain-no-auth-github-hooks@kubernetescrd"
    hajimari.io/enable: "false"
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host flux-webhook.${SECRET_DOMAIN}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-production-tls" # flux-webhook-production-tls # Used for non-wildcard
